tests/NormalTests/paczka1/fuzzy1/46688877.err
Error in line 18: 5toMyglpP S306 58,5
Error in line 32: KHrqe S832 88,5
